# tensor_inv

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml
benchmarks/: bench.py  results.pkl
notebooks/: 01_svd.ipynb  02_crt.ipynb  02_ozaki.ipynb  03_lu.ipynb  04_cholesky.ipynb  05_rsvd.ipynb  06_bench.ipynb
src/tensor_inv/: __init__.py  _cuda_crt.py  _triton_matmul.py  cholesky.py  crt_matmul.py  lu.py  ozaki.py  rsvd.py
src/tensor_inv/csrc/: crt_kernel.cu
tests/: test_cholesky.py  test_crt.py  test_lu.py  test_ozaki.py  test_rsvd.py
